refactor : commenting out not implemented yet method.
