# api/api.yml
@@ -389,46 +389,3 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
-
-  /banks/query:
-    post:
-      summary: Query banks
-      description: Query banks.
-      operationId: queryBanks
-
-      parameters:
-        - $ref: '#/components/parameters/account'
-        - $ref: '#/components/parameters/requestId'
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/QueryBanksBody'
-
-      responses:
-        '200':
-          description: List of banks
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/QueryBankResponse'
-        '400':
-          description: bad request
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-        '500':
-          description: internal server error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-
-        default:
-          description: unexpected error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
